# lidar_cam_collect_data

./: livox_cam_rosbag.sh
hikrobot-mvs-camera-ros/devel/: .catkin  setup.sh
hikrobot-mvs-camera-ros/devel/include/hikrobot_camera/: cameraConfig.h
hikrobot-mvs-camera-ros/devel/lib/hikrobot_camera/: hikrobot_camera
hikrobot-mvs-camera-ros/devel/lib/pkgconfig/: hikrobot_camera.pc
hikrobot-mvs-camera-ros/src/HIKROBOT-MVS-CAMERA-ROS-master/config/: camera-outdoor.yaml
hikrobot-mvs-camera-ros/src/HIKROBOT-MVS-CAMERA-ROS-master/src/: main.cpp
livox_point_ground_filter/devel/lib/points_cluster/: points_cluster_node
livox_point_ground_filter/src/: README.md
livox_point_ground_filter/src/plane_fit_ground_filter/plane_ground_filter/: CMakeLists.txt
livox_point_ground_filter/src/plane_fit_ground_filter/plane_ground_filter/launch/: plane_ground_filter.launch
livox_point_ground_filter/src/plane_fit_ground_filter/plane_ground_filter/src/: plane_ground_filter.cpp
livox_point_ground_filter/src/point_cluster/: CMakeLists.txt  README.md
livox_point_ground_filter/src/point_cluster/include/: points_cluster_core.h
livox_point_ground_filter/src/point_cluster/launch/: points_cluster.launch
livox_point_ground_filter/src/point_cluster/src/: points_cluster_core.cpp
livox_point_process/devel/: .catkin  local_setup.sh
livox_point_process/devel/lib/pkgconfig/: plane_ground_filter.pc  (+1 more)
livox_ros/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
livox_ros_driver/devel/: .catkin  .rosinstall  local_setup.sh
rosbag/: record.sh
usb-cam/devel/: .catkin  .rosinstall
(+30 files in other folders)
